LorawanGateway/build/log/idf_py_stdout_output_9036
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D C:\Users\rafae\workspace\LorawanGateway\build\bootloader && C:\Users\rafae\.espressif\python_env\idf6.0_py3.14_env\Scripts\python.exe C:/esp/v6.0/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/rafae/workspace/LorawanGateway/build/bootloader/bootloader.bin"
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Users\rafae\.espressif\tools\xtensa-esp-elf\esp-15.2.0_20251204\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DESP_PSA_ITS_AVAILABLE -DIDF_VER=\"v6.0-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DMBEDTLS_MAJOR_VERSION=4 -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -DTF_PSA_CRYPTO_USER_CONFIG_FILE=\"mbedtls/esp_config.h\" -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/rafae/workspace/LorawanGateway/build/config -IC:/Users/rafae/workspace/LorawanGateway/main -IC:/esp/v6.0/esp-idf/components/esp_libc/platform_include -IC:/esp/v6.0/esp-idf/components/freertos/config/include -IC:/esp/v6.0/esp-idf/components/freertos/config/include/freertos -IC:/esp/v6.0/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v6.0/esp-idf/components/freertos/esp_additions/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v6.0/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/etm/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/modem/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/v6.0/esp-idf/components/esp_hw_support/port/esp32/include -IC:/esp/v6.0/esp-idf/components/heap/include -IC:/esp/v6.0/esp-idf/components/heap/tlsf -IC:/esp/v6.0/esp-idf/components/log/include -IC:/esp/v6.0/esp-idf/components/soc/include -IC:/esp/v6.0/esp-idf/components/soc/esp32 -IC:/esp/v6.0/esp-idf/components/soc/esp32/include -IC:/esp/v6.0/esp-idf/components/soc/esp32/register -IC:/esp/v6.0/esp-idf/components/hal/platform_port/include -IC:/esp/v6.0/esp-idf/components/hal/esp32/include -IC:/esp/v6.0/esp-idf/components/hal/include -IC:/esp/v6.0/esp-idf/components/esp_rom/include -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32 -IC:/esp/v6.0/esp-idf/components/esp_common/include -IC:/esp/v6.0/esp-idf/components/esp_system/include -IC:/esp/v6.0/esp-idf/components/esp_system/port/soc -IC:/esp/v6.0/esp-idf/components/esp_system/port/include/private -IC:/esp/v6.0/esp-idf/components/esp_stdio/include -IC:/esp/v6.0/esp-idf/components/xtensa/esp32/include -IC:/esp/v6.0/esp-idf/components/xtensa/include -IC:/esp/v6.0/esp-idf/components/xtensa/deprecated_include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpio/include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpio/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_usb/include -IC:/esp/v6.0/esp-idf/components/esp_hal_pmu/include -IC:/esp/v6.0/esp-idf/components/esp_hal_pmu/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_ana_conv/include -IC:/esp/v6.0/esp-idf/components/esp_hal_ana_conv/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_dma/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2s/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2s/esp32/include -IC:/esp/v6.0/esp-idf/components/lwip/include -IC:/esp/v6.0/esp-idf/components/lwip/include/apps -IC:/esp/v6.0/esp-idf/components/lwip/lwip/src/include -IC:/esp/v6.0/esp-idf/components/lwip/port/include -IC:/esp/v6.0/esp-idf/components/lwip/port/freertos/include -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/v6.0/esp-idf/components/esp_driver_spi/include -IC:/esp/v6.0/esp-idf/components/esp_pm/include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpspi/include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpspi/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_driver_dma/include -IC:/esp/v6.0/esp-idf/components/esp_driver_gpio/include -IC:/esp/v6.0/esp-idf/components/esp_wifi/include -IC:/esp/v6.0/esp-idf/components/esp_wifi/include/local -IC:/esp/v6.0/esp-idf/components/esp_wifi/wifi_apps/include -IC:/esp/v6.0/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/esp/v6.0/esp-idf/components/esp_event/include -IC:/esp/v6.0/esp-idf/components/esp_phy/include -IC:/esp/v6.0/esp-idf/components/esp_phy/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_netif/include -IC:/esp/v6.0/esp-idf/components/nvs_flash/include -IC:/esp/v6.0/esp-idf/components/esp_partition/include -IC:/esp/v6.0/esp-idf/components/esp_blockdev/include -IC:/esp/v6.0/esp-idf/components/wpa_supplicant/include -IC:/esp/v6.0/esp-idf/components/wpa_supplicant/port/include -IC:/esp/v6.0/esp-idf/components/wpa_supplicant/esp_supplicant/include -IC:/esp/v6.0/esp-idf/components/driver/i2c/include -IC:/esp/v6.0/esp-idf/components/driver/touch_sensor/include -IC:/esp/v6.0/esp-idf/components/driver/twai/include -IC:/esp/v6.0/esp-idf/components/driver/touch_sensor/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2c/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2c/include -IC:/esp/v6.0/esp-idf/components/esp_hal_twai/include -IC:/esp/v6.0/esp-idf/components/esp_hal_twai/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_touch_sens/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_touch_sens/include -IC:/esp/v6.0/esp-idf/components/mbedtls/port/include -IC:/esp/v6.0/esp-idf/components/mbedtls/mbedtls/include -IC:/esp/v6.0/esp-idf/components/mbedtls/mbedtls/library -IC:/esp/v6.0/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/core -IC:/esp/v6.0/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/builtin/src -IC:/esp/v6.0/esp-idf/components/mbedtls/port/psa_driver/include -IC:/esp/v6.0/esp-idf/components/esp_security/include -IC:/esp/v6.0/esp-idf/components/esp_hal_security/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_security/include -IC:/esp/v6.0/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/include -IC:/esp/v6.0/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/builtin/include -IC:/esp/v6.0/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/everest/include -IC:/esp/v6.0/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/p256-m -IC:/esp/v6.0/esp-idf/components/mqtt/include -IC:/esp/v6.0/esp-idf/components/tcp_transport/include -IC:/esp/v6.0/esp-idf/components/esp-tls -IC:/esp/v6.0/esp-idf/components/esp-tls/esp-tls-crypto -IC:/esp/v6.0/esp-idf/components/esp_timer/include -IC:/esp/v6.0/esp-idf/components/mqtt/lib/mqtt_utils/include -IC:/esp/v6.0/esp-idf/components/mqtt/lib/mqtt_utils/../include -IC:/Users/rafae/workspace/LorawanGateway/components/ttn-esp32/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos @"C:/Users/rafae/workspace/LorawanGateway/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/rafae/workspace/LorawanGateway=. -fmacro-prefix-map=C:/esp/v6.0/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -Os -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Users/rafae/workspace/LorawanGateway/main/main.c
C:/Users/rafae/workspace/LorawanGateway/main/main.c: In function 'lora_receive':
C:/Users/rafae/workspace/LorawanGateway/main/main.c:333:26: error: comparison is always true due to limited range of data type [-Werror=type-limits]
  333 |         if (nb > 0 && nb <= 255) {
      |                          ^~
cc1.exe: all warnings being treated as errors
ninja: build stopped: subcommand failed.
